--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^2.6.0",
     "antd": "^5.26.3",
     "axios": "^1.10.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
+    "echarts-wordcloud": "^2.1.0",
+    "katex": "^0.16.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "react-tagcloud": "^2.3.3",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0"
   },
   "scripts": {
     "start": "webpack serve --mode development --open",
