--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "echarts-for-react": "^3.0.2",
     "echarts-wordcloud": "^2.1.0",
     "katex": "^0.16.22",
+    "pptxjs": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
